public/files/main_style.css
/* ... */
 #nav-wrap .container { clear: both; overflow: visible; position: relative; }
 #nav-wrap table { width:100%; margin-bottom:20px; margin-top:44px; }
 #nav-wrap td { verticle-align:middle; }
 #nav-wrap .container ul { list-style: none; float: right; }
 #nav-wrap .container ul li { list-style: none; float: left; margin-left:20px; }
 #nav-wrap .container ul li a { float: left; display: block; font-family: 'Oswald', Impact, sans-serif; color: #777777; text-decoration: none; padding: 5px 10px; border: 0; outline: 0; list-style-type: none; font-size: 18px; line-height:28px; text-transform:uppercase; }
 #nav-wrap .container ul li#active a, #nav-wrap .container ul li a:hover { color: #fff; background:url(theme/nav-bg_green.png?444695) repeat-x top; border: 0; }
 #wsite-menus { z-index: 10000 !important; }
 #wsite-menus .wsite-menu-wrap { margin-top: 8px !important; overflow: visible !important; }
 #wsite-menus .wsite-menu {
   min-width: 210px !important;
   padding: 6px 0 !important;
   background: #ffffff !important;
   border: 1px solid #d8d8d8 !important;
   border-radius: 3px !important;
   box-shadow: 0 8px 20px rgba(0,0,0,0.14) !important;
 }
 #wsite-menus .wsite-menu li { float: none !important; display: block !important; margin: 0 !important; width: 100% !important; }
 #wsite-menus .wsite-menu li a {
   display: block !important;
   float: none !important;
   box-sizing: border-box !important;
   width: 100% !important;
   min-height: 36px !important;
   padding: 8px 14px !important;
   background: #ffffff !important;
   border: 0 !important;
   color: #555555 !important;
   font-family: 'Oswald', Impact, sans-serif;
   font-size: 15px !important;
   line-height: 20px !important;
   text-align: left !important;
   text-transform: uppercase;
   white-space: nowrap !important;
 }
 #wsite-menus .wsite-menu li a:hover, #wsite-menus .wsite-menu li.wsite-nav-current a {
   color:#ffffff !important;
   background: #47b403 !important;
 }
 #wsite-menus .wsite-menu-title { display: block !important; white-space: nowrap !important; }
 #nav-wrap .container ul.wsite-menu { float: none; }
 #nav-wrap .container ul.wsite-menu li { float: none; margin-left: 0; }
 #nav-wrap .container ul.wsite-menu li a {
   float: none;
   min-width: 210px;
   box-sizing: border-box;
   padding: 8px 14px;
   background: #ffffff !important;
   color: #555555 !important;
   line-height: 20px;
   white-space: nowrap;
 }
 #nav-wrap .container ul.wsite-menu li a:hover, #nav-wrap .container ul.wsite-menu li.wsite-nav-current a {
   background: #47b403 !important;
   color: #ffffff !important;
 }
 #banner { position:relative; }
 #banner-top{ margin-top:0px; background:url(theme/banner-top.png?444695) no-repeat top; height:31px; width:100%; }
 #banner-wrap .container{ background: url(theme/content-bg.png?444695) repeat-y; }
 .tall-header-page #banner-wrap .container {padding-top:26px;}
 .tall-header-page .wsite-header { width: 860px; height: 500px; margin:0px 0px 0px 50px; background: url(theme/banner-tall.jpg?444695) no-repeat; }
 .short-header-page #banner-wrap .container {padding-top:26px;}
 .short-header-page .wsite-header { width: 860px; height: 250px; margin:0px 0px 0px 50px; background: url(theme/banner-short.jpg?444695) no-repeat; }
 .no-header-page .wsite-header { display:none; }
 .landing-page #banner { padding: 0; }
 #bannerleft { float: left; width: 100%; height:526px; position:relative; }
 .landing-page .wsite-header { width: 860px; height: 500px; margin:26px 0px 40px 50px; background: url(theme/banner-landing.jpg?444695) no-repeat; }
 #bannerright { float: right; width: 257px; padding: 30px 38px 28px; position:absolute; top:134px; left:313px; background: url(theme/banner-right-bg.png?444695) repeat; }
 #bannerright h2 { color: #fff; font-size: 24px; font-family: 'Oswald', sans-serif; padding-bottom:10px; text-transform:uppercase; font-weight:normal; }
 #bannerright div.paragraph { color: #fff; font-size:14px ; padding-bottom:25px; margin-right:20px; }
 #bannerright p { color: #fff; font-size:14px ; padding-bottom:25px; margin-right:20px; }
 #main-wrap { position:relative; }
 #main-wrap .container { background: url(theme/content-bg.png?444695) repeat-y; padding:30px 50px 30px 50px; width:860px; min-height:400px; color:#888888; }
 #main-wrap .paragraph ul { padding-left:5px !important; }
 #main-wrap .paragraph li { list-style:none !important; background:url(theme/bullet-content.png?444695) no-repeat 0px 1px; padding-left:40px !important; margin-bottom:13px !important; font-family: 'Droid Serif', serif; font-style:italic; }
 #main-wrap .container blockquote { font-family: 'Droid Serif', serif; font-style:italic; font-size:14px; border-left:none; color:#aaa; background: url(theme/blockquote-bg.png?444695) no-repeat 5px 0px; padding:0px 15px 15px 60px; margin:20px 0px; line-height:26px; }
 #main-wrap .container form .wsite-button { margin-top:20px; }
 #main-wrap-bottom { background: url(theme/main-wrap-bottom-bg.gif?444695) repeat-x top; position:relative; height:94px; }
 #main-wrap-bottom .container { background: url(theme/content-bottom.png?444695) no-repeat top; position:relative; width:1060px; height:94px; bottom:0px; left:3px; }
 .left-image { background: url(theme/illustration-left.png?444695) no-repeat bottom left; height:443px; width:169px; position:absolute; bottom:20px; left:-92px; display:none; }
 .right-image { background: url(theme/illustration-right.png?444695) no-repeat bottom right; height:287px; width:126px; position:absolute; bottom:20px; right:-47px; display:none; }
 #footer-wrap { background:url(theme/footer-bg.jpg?444695) repeat; text-align:right; margin-top:10px; font-size:15px; font-weight:normal; color:#777777; }
 #footer-wrap-inner { background:url(theme/footer-top-bar-decoration.jpg?444695) repeat-x top; position:relative; top:-10px; height:10px; }
 #footer-wrap .container { padding:10px 0px 25px; color:#aaaaaa; }
 #footer-wrap .wsite-form-container { margin-top:0px !important; }
/* ... */

